# ai-jobs-trends

./: .env.example  .gitignore  LICENSE  README.md  ai-jobs-trends-project-brief.md  progress.md  pyproject.toml
.github/workflows/: daily-run.yml
scripts/: bootstrap_github.sh
src/: __init__.py  cli.py
src/extraction/: __init__.py
src/normalization/: __init__.py
src/reporter/: __init__.py
src/sources/: __init__.py
src/storage/: __init__.py  init_db.py  models.py
