[project]
name = "ai-jobs-trends"
version = "0.1.0"
description = "Daily-updated AI job market trends tracker. ATS ingestion + Haiku extraction + canonical normalization + dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Haichuan Zhang" }]

dependencies = [
  # LLM
  "anthropic>=0.39.0",
  "openai>=1.54.0",
  # HTTP
  "httpx>=0.27.0",
  "tenacity>=9.0.0",
  # Storage
  "sqlalchemy>=2.0.35",
  # Data / dedup
  "numpy>=2.0.0",
  "rapidfuzz>=3.10.0",
  # Config
  "pyyaml>=6.0.2",
  "python-dotenv>=1.0.1",
  # CLI
  "click>=8.1.7",
  "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[project.scripts]
ai-jobs = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
